<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appjar.dogbuster.dogbuster.Uploader">

    <RelativeLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtSelLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="9dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtSelLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtSelLat"
            android:layout_below="@+id/txtSelLat"
            android:layout_marginTop="21dp"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/txtSelLong"
            android:layout_below="@+id/txtSelLong"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/rsc_LOW"
                    tools:text="@string/rsc_LOW" />

                <RadioButton
                    android:id="@+id/radioMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rsc_MEDIUM"
                    tools:text="@string/rsc_MEDIUM" />

                <RadioButton
                    android:id="@+id/radioHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rsc_HIGH"
                    tools:text="@string/rsc_HIGH" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="9dp"
            android:layout_marginTop="17dp"
            android:text="@string/rsc_range"
            tools:text="@string/rsc_range" />

        <EditText
            android:id="@+id/editRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView11"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editRange"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/rsc_submit"
            tools:text="@string/rsc_submit" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnSubmit"
            android:layout_marginTop="12dp"
            android:text="@string/rsc_cancel"
            tools:text="@string/rsc_cancel" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
