<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appjar.dogbuster.dogbuster.DogbusterLogin"
    tools:showIn="@layout/activity_dogbuster_login">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="9dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="14dp"
            android:text="@string/rsc_email"
            tools:text="@string/rsc_email" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/txtEmail"
            android:layout_marginTop="29dp"
            android:text="@string/rsc_password"
            tools:text="@string/rsc_password" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="23dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/cmdLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/rsc_login"
            tools:text="@string/rsc_login" />

        <TextView
            android:id="@+id/txtForgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cmdLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="Forgot Password"
            android:textColor="#1565ff" />

        <ProgressBar
            android:id="@+id/progressForgot"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtForgotPwd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
